After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674550 - print-notifications: Don't create an unused proxy object
print-notifications: Don't create an unused proxy object
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: printers
unspecified
Other All
: Normal normal
: ---
Assigned To: Marek Kašík
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-22 00:47 UTC by Matthias Clasen
Modified: 2012-04-23 13:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
print-notifications: Don't create an unused proxy object (3.80 KB, patch)
2012-04-22 00:47 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2012-04-22 00:47:04 UTC
The proxy object was not used for anything, and it was creating
synchronously.
Comment 1 Matthias Clasen 2012-04-22 00:47:07 UTC
Created attachment 212528 [details] [review]
print-notifications: Don't create an unused proxy object
Comment 2 Marek Kašík 2012-04-23 13:51:09 UTC
Hi,

thank you for the patch. I've committed it to the master.

Regards

Marek