print-notifications: Don't create an unused proxy object

The proxy object was not used for anything, and it was creating
synchronously.

https://bugzilla.gnome.org/show_bug.cgi?id=674550